--- a/projects/fluffy-duck/src/app/home/categories-cards/categories-cards.component.html
+++ b/projects/fluffy-duck/src/app/home/categories-cards/categories-cards.component.html
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="row mb-5">
       <div class="col-12 text-center">
-        <!-- <span class="text-cursive h5 text-red d-block ">Packages You Like</span> -->
-        <h1 class="text-primary fw-bold">اهم التصنيفات</h1>
+        <h1 class="text-primary fw-bold">Our Categories</h1>
       </div>
     </div>
     <div   class="row  justify-content-center">
