--- a/projects/fluffy-duck/src/app/home/welcome/welcome.component.html
+++ b/projects/fluffy-duck/src/app/home/welcome/welcome.component.html
@@ -1,17 +1,24 @@
-<div  class="container-fluid" >
+<div class="container-fluid">
   <div class="container align-middle">
     <div class="row">
+      <div style="margin-top: 280px">
         <span
-          style="font-family: hurricane !important;margin-top: 280px;"
+          style="font-family: 'Indie Flower', cursive"
           class="text-cursive h5 text-red"
-          >مرحبا بكم في موقعنا</span
+          >Welcome To Our Website</span
         >
-        <h1 class="mb-3 fw-bold text-light">اجلب الحياة الممتعة لأطفالك</h1>
-        <p>العاب مذهله لأطفالك</p>
-        <p class="mt-5">
-          <a href="#" class="btn btn-primary py-4 btn-custom-1">تسوق الان</a>
+        <h1 class="mb-3 fw-bold text-light">Bring Fun Life To Your Kids</h1>
+        <p style="color: white; font-weight: 400; font-size: 18px">
+          Amazing Playground for your kids
         </p>
+        <p class="mt-5">
+          <a href="#" class="btn btn-primary py-4 btn-custom-1">Shop Now</a>
+        </p>
+      </div>
     </div>
   </div>
-  
 </div>
+<!-- <span class="text-cursive h5">Welcome To Our Website</span>
+              <h1 class="mb-3 font-weight-bold text-teal">Bring Fun Life To Your Kids</h1>
+              <p>Amazing Playground for your kids</p>
+              <p class="mt-5"><a href="#" class="btn btn-primary py-4 btn-custom-1">Learn More</a></p> -->
