--- a/projects/fluffy-duck/src/app/layout/header/header.component.html
+++ b/projects/fluffy-duck/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="site-navbar px-sm-0 py-0 ">
-  <p *ngIf="!auth" class="register"><a routerLink="/login"  >تسجيل دخول/</a> <a routerLink="/register">حساب جديد</a></p>
+  <p *ngIf="!auth" class="register"><a routerLink="/login"  > Register/</a> <a routerLink="/register"> Login</a></p>
 
   <div class="container">
     <div class="row">
@@ -49,14 +49,14 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a
                   class="nav-link"
                   routerLinkActive="active"
                   aria-current="page"
                   routerLink="/home"
-                  >الصفحه الرئيسيه</a
+                  >Home</a
                 >
               </li>
               <li class="nav-item">
@@ -64,7 +64,7 @@
                   class="nav-link"
                   routerLinkActive="active"
                   (click)="ToStore()"
-                  >المتجر</a
+                  >Store</a
                 >
               </li>
               <li class="nav-item">
@@ -99,7 +99,7 @@
                 </ul>
               </li>
             </ul>
-            <div class="links">
+            <div class="links me-5">
               <a href="#">
                 <i class="fa-brands fa-facebook-f text-primary"></i
               ></a>
@@ -116,67 +116,3 @@
   </div>
 </header>
 
-<!-- <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
-      <a class="navbar-brand" href="#"
-        ><img src="../../../assets/imgs/logo.jpeg" alt=""
-      /></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              routerLinkActive="active"
-              aria-current="page"
-              routerLink="/home"
-              >الصفحه الرئيسيه</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/store"
-              >المتجر</a
-            >
-          </li>
-          <li class="nav-item">
-              <a
-                class=" nav-link dropdown-toggle"
-                type="button"
-                id="dropdownMenuButton1"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                (click)="show= !show"
-              >
-                القوائم والحساب
-          </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" routerLink="/login">تسجيل دخول</a></li>
-                <li><a class="dropdown-item" routerLink="/register">انشاء حساب </a></li>
-                <li>
-                  <a class="dropdown-item" href="#">مشترياتك</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">المفضله</a>
-                </li>
-              </ul>
-          </li>
-        </ul>
-        <div class="links">
-          <a href="#"> <i class="fa-brands fa-facebook-f text-primary"></i></a>
-
-          <a href="#"><i class="fa-brands fa-twitter text-success"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin-in text-danger"></i></a>
-        </div>
-      </div>
-    </div>
-  </nav> -->
